content/_generated-doc/2.13/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc

:summaryTableId: quarkus-infinispan-client-infinispan-client-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-infinispan-client-infinispan-client-runtime-config_configuration]]link:#quarkus-infinispan-client-infinispan-client-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.server-list]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.server-list[quarkus.infinispan-client.server-list]`

[.description]
--
Sets the host name/port to connect to. Each one is separated by a semicolon (eg. host1:11222;host2:11222).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SERVER_LIST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SERVER_LIST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-schema-registration]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-schema-registration[quarkus.infinispan-client.use-schema-registration]`

[.description]
--
Enables or disables Protobuf generated schemas upload to the server. Set it to 'false' when you need to handle the lifecycle of the Protobuf Schemas on Server side yourself. Default is 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_USE_SCHEMA_REGISTRATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_USE_SCHEMA_REGISTRATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence[quarkus.infinispan-client.client-intelligence]`

[.description]
--
Sets client intelligence used by authentication Available values: ++*++ `BASIC` - Means that the client doesn't handle server topology changes and therefore will only use the list of servers supplied at configuration time. ++*++ `TOPOLOGY_AWARE` - Use this provider if you don't want the client to present any certificates to the remote TLS host. ++*++ `HASH_DISTRIBUTION_AWARE` - Like `TOPOLOGY_AWARE` but with the additional advantage that each request involving keys will be routed to the server who is the primary owner which improves performance greatly. This is the default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CLIENT_INTELLIGENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CLIENT_INTELLIGENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`HASH_DISTRIBUTION_AWARE`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth[quarkus.infinispan-client.use-auth]`

[.description]
--
Enables or disables authentication. Set it to false when connecting to an Infinispan Server without authentication. deployments. Default is 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_USE_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_USE_AUTH+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username[quarkus.infinispan-client.auth-username]`

[.description]
--
Sets username used by authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-password]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-password[quarkus.infinispan-client.auth-password]`

[.description]
--
Sets password used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-realm]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-realm[quarkus.infinispan-client.auth-realm]`

[.description]
--
Sets realm used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_REALM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_REALM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-server-name]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-server-name[quarkus.infinispan-client.auth-server-name]`

[.description]
--
Sets server name used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_SERVER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_SERVER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`infinispan`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject[quarkus.infinispan-client.auth-client-subject]`

[.description]
--
Sets client subject, necessary for those SASL mechanisms which require it to access client credentials.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_CLIENT_SUBJECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_CLIENT_SUBJECT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler[quarkus.infinispan-client.auth-callback-handler]`

[.description]
--
Specifies a `CallbackHandler` to be used during the authentication handshake. The `Callback`s that need to be handled are specific to the chosen SASL mechanism.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_CALLBACK_HANDLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_CALLBACK_HANDLER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism[quarkus.infinispan-client.sasl-mechanism]`

[.description]
--
Sets SASL mechanism used by authentication. Available values: ++*++ `DIGEST-MD5` - Uses the MD5 hashing algorithm in addition to nonces to encrypt credentials. This is the default. ++*++ `EXTERNAL` - Uses client certificates to provide valid identities to Infinispan Server and enable encryption. ++*++ `PLAIN` - Sends credentials in plain text (unencrypted) over the wire in a way that is similar to HTTP BASIC authentication. You should use `PLAIN` authentication only in combination with TLS encryption.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SASL_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SASL_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`DIGEST-MD5`


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store[quarkus.infinispan-client.trust-store]`

[.description]
--
Specifies the filename of a truststore to use to create the `SSLContext`. You also need to specify a trustStorePassword. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password[quarkus.infinispan-client.trust-store-password]`

[.description]
--
Specifies the password needed to open the truststore You also need to specify a trustStore. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-type]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-type[quarkus.infinispan-client.trust-store-type]`

[.description]
--
Specifies the type of the truststore, such as JKS or JCEKS. Defaults to JKS if trustStore is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.configuration]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.configuration[quarkus.infinispan-client.cache."cache".configuration]`

[.description]
--
Cache configuration in inlined XML to create the cache on first access. Will be ignored if the configuration-uri is provided for the same cache name. An example of the user defined property: quarkus.infinispan-client.cache.bookscache.configuration=

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.configuration-uri]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.configuration-uri[quarkus.infinispan-client.cache."cache".configuration-uri]`

[.description]
--
Cache configuration file in XML whose path will be converted to URI to create the cache on first access. An example of the user defined property. cacheConfig.xml file is located in the 'resources' folder: quarkus.infinispan-client.cache.bookscache.configuration-uri=cacheConfig.xml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-max-entries]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-max-entries[quarkus.infinispan-client.cache."cache".near-cache-max-entries]`

[.description]
--
The maximum number of entries to keep locally for the specified cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-mode]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-mode[quarkus.infinispan-client.cache."cache".near-cache-mode]`

[.description]
--
Sets near cache mode used by the Infinispan Client Available values: ++*++ `DISABLED` - Means that near caching is disabled. This is the default value. ++*++ `INVALIDATED` - Means is near caching is invalidated, so when entries are updated or removed server-side, invalidation messages will be sent to clients to remove them from the near cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `invalidated` 
|


a| [[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-use-bloom-filter]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.cache.-cache-.near-cache-use-bloom-filter[quarkus.infinispan-client.cache."cache".near-cache-use-bloom-filter]`

[.description]
--
Enables bloom filter for near caching. Bloom filters optimize performance for write operations by reducing the total number of invalidation messages.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===